test/sema/missing-return.cx
// RUN: %not %cx -typecheck %s | %FileCheck %s

// CHECK: [[@LINE+1]]:5: error: 'foo' is missing a return statement
int foo(bool b) {
    if (b) {
        return 42;
    }
}
